<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.CreditFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewCast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:src="@drawable/dinossauro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/recyclerviewCast"
        android:contentDescription="@string/dinosaur" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/there_is_no_internet_connection"
        android:textAlignment="center"
        android:textSize="@dimen/main_title_size"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/iv_error" />

    <TextView
        android:id="@+id/tv_error_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/suggestion_to_connect_to_the_internet"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_error" />

</androidx.constraintlayout.widget.ConstraintLayout>
